--- a/Capitoli/Fly/fly.tex
+++ b/Capitoli/Fly/fly.tex
@@ -1,12 +1,22 @@
-Implementare un’architettura multi-cloud non significa raggruppare semplicemente vari servizi di diversi Cloud provider in un unico sistema, ma richiede un approccio ragionato ben specifico. L'obiettivo è quello di creare un ambiente coeso che sfrutti in maniera efficace la collaborazione tra i diversi Cloud senza aumentare eccessivamente la complessità necessaria alla sua gestione. A causa della mancanza di standardizzazione, infatti, l'approccio multi-cloud richiede la conoscenza di diversi strumenti in quanto ogni Cloud provider fornisce le proprie API, metodi di accesso e protocolli di sicurezza rendendone difficile l’utilizzo. È facile comprendere come, se da una parte il multi-cloud può portare enormi vantaggi agli utenti che decidono di utilizzarlo, d’altro canto anche le difficoltà da affrontare non sono poche e c'è bisogno di soluzioni efficaci per superarli. \\
-La chiave di volta nell’utilizzo del multi-cloud è sicuramente l’astrazione, ovvero l'utilizzo di strumenti che sollevano l'utente dalla necessità di conoscere tutti i dettagli implementativi per la gestione dell'ambiente, permettendo così di ottenere i vantaggi del multi-cloud evitando di introdurre complessità aggiuntiva \cite{ForbesMultiCloud}. Per venire incontro a questa esigenza nasce \textbf{Fly}, un \textbf{Domain-Specific Language} per il Calcolo Scientifico sul multi-cloud il cui obiettivo è quello di semplificare lo sviluppo di applicazioni che sfruttino la potenza computazionale offerta da molteplici Cloud provider, mediante il paradigma FaaS per ottenere alta scalabilità e alte prestazioni. Il punto di forza di Fly risiede nella gestione dell'interazione con il Cloud la quale viene completamente astratta all’utente finale che non necessita di conoscere le specifiche API del provider che vuole utilizzare \cite{ISISLab}. \\
-L’aspetto innovativo di Fly è costituito dal concetto di \textbf{funzione Fly}, un blocco di codice indipendente che può essere eseguito in modo concorrente, in linea con il modello FaaS che utilizza funzioni Serverless. \\
-Le caratteristiche principali di Fly sono potenza, efficacia ed efficienza:
+Per sviluppare un'architettura multi-cloud non basta raggruppare i vari servizi dei diversi Cloud provider in un unico sistema ma bisogna avere un approccio specializzato e ben ragionato. 
+Bisogna creare infatti un ambiente omogeneo, tale da sfruttare efficacemente le cooperazioni fra i diversi Cloud provider, cercando di non rendere troppo difficile la sua gestione.
+La difficoltà di costruire un ambiente multi-cloud risiede nella mancanza di standard nei vari servizi a disposizione. Ognuno dei diversi cloud provider mette a disposizione API e strumenti specifici per l'accesso e l'utilizzo dei propri servizi, costringendo lo sviluppatore a conoscerli tutti per la costruzione di un'architettura multi-cloud.
+È chiaro quindi che, anche se il multi-cloud comporta enormi vantaggi nel suo utilizzo,esso risulta particolarmente complesso da utilizzare e da sfruttare facendo nascere il bisogno di strumenti che facilitino lo sviluppo di applicazioni basate sul multi-cloud\\
+La chiave di volta nell’utilizzo del multi-cloud è sicuramente l’astrazione, 
+ovvero l'utilizzo di strumenti che sollevano l'utente dalla necessità di conoscere tutti i dettagli implementativi per la gestione dell'ambiente, 
+permettendo così di ottenere i vantaggi del multi-cloud evitando di introdurre complessità aggiuntiva \cite{ForbesMultiCloud}. 
+A questo scopo è nato \textbf{Fly}, un \textbf{Domain-Specific Language} per il Calcolo Scientifico sul multi-cloud, al fine di sviluppare con facilità applicazioni che utilizzino la complessità computazionale elargita da diversi Cloud provider, grazie al paradigma FaaS, garantendo alte prestazioni ed alta scalabilità. 
+Il punto di forza di Fly risiede nella gestione dell'interazione con il Cloud la quale viene completamente astratta all’utente finale che 
+non necessita di conoscere le specifiche API del provider che vuole utilizzare \cite{ISISLab}. \\
+La novità in Fly risiede nel concetto di \textbf{funzione Fly}, ovvero un blocco di codice indipendente eseguibile concorrentemente, in linea con il modello FaaS, che usufruisce di funzioni Serverless. \\
 
+
+Le caratteristiche principali di Fly sono:
 \begin{itemize}
-    \item Fly è \textit{potente} perché permette di sfruttare le capacità di computazione di diversi Cloud provider in una singola applicazione, utilizzando le soluzioni più efficienti in base alle necessità;
+    \item Fly è \textit{efficace} perché permette di sfruttare la potenza computazionale di diversi Cloud provider in poche righe di codice, utilizzando le soluzioni più efficienti in base alle necessità;
 
-    \item Fly è \textit{efficace} perché è un linguaggio user-friendly, facile da comprendere ed utilizzare, che libera il programmatore dal dover gestire e configurare diversi ambienti di esecuzione;
+    \item Fly è \textit{chiaro} perché è un linguaggio user-friendly, che rimuove diverse preoccupazioni alle quali il programmatore dovrebbe tener conto
+    come il dover gestire e configurare diversi ambienti di esecuzione;
     
     \item Fly è \textit{efficiente} perché permette di scegliere i servizi migliori sia dal punto di vista delle funzionalità che del costo, inoltre riduce i tempi di sviluppo grazie all'astrazione.
 \end{itemize}
@@ -14,25 +24,29 @@ Le caratteristiche principali di Fly sono potenza, efficacia ed efficienza:
 In questo capitolo saranno descritti i dettagli del linguaggio Fly, descrivendo gli obiettivi per cui è stato sviluppato, la sua architettura e il suo funzionamento. Viene inoltre introdotto il concetto di Domain-Specific Language e Xtext, il framework utilizzato per lo sviluppo di Fly.
 
 \section{Obiettivi}
-Fly nasce con lo scopo di riconciliare il Cloud Computing con l’High Performance Computing, fornendo uno strumento potente, semplice ed efficace per lo sviluppo di applicazioni Serverless di Calcolo Scientifico che sfruttino il sistema multi-cloud per ottenere un'alta scalabilità. \\
+Fly ha come obiettivo congiungere il Cloud Computing con l’High Performance Computing, fornendo un applicativo potente, semplice ed efficace per lo sviluppo di applicativi in grado di sfruttare il sistema multi-cloud al massimo delle sue potenzialità. \\
 I principali obiettivi di Fly sono:
 
 \begin{itemize}
-    \item \textit{espressività} - possibilità di scrivere algoritmi con poche istruzioni, in modo chiaro e leggibile, in modo da rendere lo sviluppo di un programma di Calcolo Scientifico su larga scala semplice ed intuitivo anche per sviluppatori non esperti;
+    \item \textit{espressività} - possibilità di scrivere applicativi in maniera precisa,intuitiva e comprensibile;
     
-    \item \textit{alta usabilità} - scrivere un programma Fly deve essere semplice per gli esperti del dominio, l’interazione con l’ambiente Cloud deve essere completamente astratta eliminando la necessità di conoscere le API del Cloud provider;
+    \item \textit{alta usabilità} - scrivere ed eseguire un applicativo Fly sono operazioni che devono essere semplici e completamente 
+    astratte dai processi necessari all'interazione con il Cloud Provider, eliminando così la necessità di conoscere le API del Cloud provider;
     
-    \item \textit{scalabilità} - sia architetture Symmetric Multiprocessing (SMP), sia architetture costruite su Cloud devono essere in grado di scalare facilmente.
+    \item \textit{scalabilità} - I processi eseguiti in locale come quelli eseguiti in ambiente Cloud devono essere altamente scalabili.
 \end{itemize}
 
-Fly è stato progettato per permettere agli sviluppatori di dominio, ovvero esperti di un particolare campo con conoscenze limitate riguardo i complessi sistemi paralleli e distribuiti, di sviluppare le proprie applicazioni sfruttando il parallelismo mediante architetture Serverless. Infatti, la sintassi di Fly è ispirata a linguaggi come Java, JavaScript, Python e R, ovvero i più potenti e famosi linguaggi di programmazione utilizzati nel Calcolo Scientifico, in modo da proporre un ambiente familiare agli sviluppatori che lo utilizzano. Vengono forniti numerosi costrutti specifici per il dominio di interesse che vanno a formare un ricco linguaggio utilizzabile facilmente per interagire con i servizi su Cloud. \\
+Fly è stato realizzato per permettere agli esperti di un particolare campo che non hanno padronanza dei concetti articolati che riguardano i sistemi paralleli e distribuiti,
+ di implementare i propri algoritmi sfruttando il parallelismo mediante architetture Serverless. Infatti, la sintassi di Fly è ispirata a linguaggi come Java, JavaScript, Python e R. 
+ Linguaggi utilizzati spesso nel Calcolo Scientifico. Vengono forniti numerosi costrutti specifici per il dominio di interesse che vanno a formare un ricco linguaggio utilizzabile facilmente per interagire con i servizi su Cloud. \\
 Fly supporta in modo implicito il paradigma di calcolo distribuito e parallelo insieme con la gestione della memoria fornendo inoltre un sistema di comunicazione di processi tramite appositi canali di comunicazione. Un programma Fly è infatti eseguibile sia su un'architettura multiprocessore sia su ambiente Cloud che supporti il modello FaaS, il tutto senza la necessità di conoscere in maniera precisa le risorse di computazione che occorrono per l'esecuzione \cite{ISISLab}.
 
-\section{Domain-Specific Language}
-Un \textbf{Domain-Specific Language (DSL)} è un linguaggio di programmazione progettato per essere utilizzato nel contesto di un particolare dominio, fornendo una notazione su misura basata sui concetti e le caratteristiche fondamentali per tale dominio. Un DSL rappresenta il concetto opposto rispetto ai linguaggi General Purpose che invece possono essere usati per un’ampia gamma di problemi e situazioni. Attraverso l’uso di un DSL viene introdotto un livello di astrazione che rende possibile anche ad esperti del dominio la creazione di soluzioni efficaci senza la necessità di avere competenze tecniche specifiche. Questo consente di affidare lo sviluppo di applicazioni software a figure che hanno una conoscenza del contesto più specifica invece che ai soli informatici, permettendo di incrementare l'efficacia e l'efficienza dell'intero processo.\\
-Un DSL non ha lo scopo di essere utile a tutti, al contrario è creato per un risolvere problemi relativi ad un contesto molto specifico. Un esempio di linguaggi di questo tipo è HTML progettato per la costruzione di siti web e sicuramente non adatto alla creazione di applicazioni, ad esempio, di simulazione, dominio a cui è invece dedicato OpenABL. Altri DSL noti sono R per l’ambito statistico o SQL per la scrittura di query su database relazionali, il quale offre il vantaggio di non aver bisogno di essere un amministratore di database per scrivere semplici interrogazioni per l'ottenimento di dati. \\
-Lo scopo principale di un DSL è quello di essere semplice da imparare e da utilizzare grazie proprio alla specificità di utilizzo che gli permette di essere piccolo, espressivo e poco ridondante, divenendo un punto d’incontro tra esperti del dominio e sviluppatori. \\
-La realizzazione di un DSL passa per lo sviluppo di un compilatore che sia in grado di leggere il programma scritto in quel particolare linguaggio, analizzarlo, processarlo e interpretarlo per generare il codice eseguibile. Questo processo prevede una serie di fasi che sono descritte di seguito:
+Quando si parla di un \textbf{Domain-Specific Language (DSL)} si intende un linguaggio di programmazione sviluppato per l'utilizzo nel contesto di un particolare dominio, che elargisce una notazione su misura fondata sui criteri e sulle caratteristiche principali per tale dominio.
+Mentre i linguaggi General Purpose possono essere utilizzati in molteplici situazioni e problemi, i DSL invece ne rappresentano il concetto opposto. Utilizzando un DSL si introduce un livello di astrazione tale da rendere possibile la realizzazione di soluzioni efficaci senza aver bisogno di competenze tecniche  specifiche anche ad esperti del dominio. Lo sviluppo di applicazioni software può così essere affidato a figure con conoscenze del contesto più specifiche e non più soltanto ai soli informatici, in modo da aumentare efficienza ed efficacia del procedimento.\\
+Un DSL però non è genericamente utile a tutti, è invece ideato per la risoluzione di problemi riguardanti contesti molto specifici.
+Fra i DSL possiamo prendere come esempio HTML, che è stato pensato per sviluppare siti web ma di certo non è compatibile, ad esempio, con la costruzione di applicazioni di simulazione, dominio a cui invece è dedicato OpenABL. Altri esempi di DSL potrebbero essere invece SQL per la stesura di query su database relazionali, che permette di scrivere interrogazioni semplici per l'ottenimento di dati senza la necessità delle competenze di un amministratore di database. \\
+Il motivo per cui nasce un DSL è quello di essere di facile comprensione ed impiego, merito della forte specificità di utilizzo, divenendo così espressivo, piccolo e poco ridondante e permettendo a sviluppatori ed esperti del dominio di utilizzarlo come punto d'incontro. \\
+Per la costruzione di un DSL è necessario realizzare un compilatore capace di leggere il programma scritto in quello specifico linguaggio, esaminarlo, processarlo e interpretarlo per poter infine generare il codice eseguibile. Andranno quindi attraversate una serie di fasi esposte a seguire:
 
 \begin{itemize}
     \item \textit{analisi lessicale} - il programma iniziale viene suddiviso in singole unità chiamate \textit{token}, ognuna delle quali corrisponde ad un singolo elemento del linguaggio;
@@ -48,9 +62,18 @@ La realizzazione di un DSL passa per lo sviluppo di un compilatore che sia in gr
 \textbf{Xtext} \cite{Xtext} è un framework open-source per lo sviluppo di linguaggi di programmazione e DSL. Diversamente dai comuni strumenti disponibili, Xtext genera non solo un parser ma anche un class model per l’Abstract Syntax Tree, fornendo anche un IDE, ovvero un ambiente di sviluppo, basato su Eclipse completo di tutte le funzioni e personalizzabile. Lo sviluppo di un linguaggio attraverso Xtext si basa sulla scrittura di una grammatica che lo definisce in tutte le sue parti, essa permette di ottenere un’infrastruttura completa inclusa di parser, linker, typechecker e compilatore insieme con il supporto all’editing per Eclipse. L’utilizzo di un framework come Xtext offre enormi vantaggi agli sviluppatori di DSL ed è per questo motivo che è stato scelto per la creazione del compilatore source-to-source di Fly.
 
 \section{Architettura}
-Utilizzare Fly per implementare la propria applicazione permette all'utente di non preoccuparsi della quantità di risorse necessaria all'esecuzione, in quanto esse vengono stabilite in automatico in base ai requisiti di computazione. Sono supportati modelli di esecuzione sia sincroni che asincroni ed è possibile scegliere tra due ambienti di run-time, ovvero la macchina locale o l'infrastruttura Cloud. Quest'ultima viene considerata come un'architettura di calcolo parallelo utilizzabile per l'esecuzione di codice concorrente grazie a costrutti specifici atti a facilitare l'esperienza dell'utente. \\
-Fly risulta in un linguaggio staticamente e fortemente tipizzato che sfrutta varie tipologie di inferenza per determinare il tipo delle variabili e delle costanti dichiarate. Un programma scritto in Fly viene tradotto in automatico dal compilatore in codice Java, nello specifico ogni tipo di dato presente all'interno di Fly ha un suo corrispettivo in quest'ultimo linguaggio, così come le varie funzionalità specifiche del dominio vengono realizzate sfruttando l'ampia gamma di metodi offerti dal linguaggio General Purpose. \\
-L’elemento fondamentale di Fly è rappresentato dal concetto di \textbf{funzione Fly}, ovvero una porzione di codice indipendente che eseguita in maniera concorrente, similmente a quanto avviene con le funzioni Serverless del modello FaaS. Le funzioni Fly possono essere eseguite in sequenziale o in parallelo, sia su infrastruttura locale multi-processore che su Cloud mediante l'utilizzo di appositi costrutti che ne permette la definizione, l'esecuzione, la sincronizzazione e la gestione della comunicazione. Quest’ultima viene resa disponibile anche tra processi differenti in esecuzione su diversi ambienti attraverso l'uso di appositi canali di comunicazione virtuali i quali rappresentano il metodo principale per lo scambio di dati tra diverse funzioni Fly. \\ 
+L'architettura di Fly è stata realizzata in modo tale che le risorse dell'applicativo sviluppato dall'utente vengano stabilite in maniera automatica in base ai requisiti computazionali.
+Essa supporta due modelli di esecuzione: in locale ed in Cloud.
+Quando si esegue l'applicativo Fly in locale, è la macchina ospitante a farsi carico dell'intero carico computazionale richiesto mentre se lo stesso applicativo viene eseguito in ambiente Cloud allora 
+l'esecuzione del codice avviene attraverso un'architettura di calcolo parallelo grazie a costrutti specifici atti a facilitare l'esperienza dell'utente.
+Fly risulta un linguaggio staticamente e fortemente tipizzato che sfrutta varie tipologie di inferenza per determinare il tipo delle variabili e delle costanti dichiarate.
+Un programma scritto in Fly viene tradotto in automatico dal compilatore in codice Java, nello specifico ogni tipo di dato presente all'interno di Fly ha un suo corrispettivo in quest'ultimo linguaggio, 
+così come le varie funzionalità specifiche del dominio vengono realizzate sfruttando l'ampia gamma di metodi offerti dal linguaggio General Purpose. \\
+L’elemento fondamentale di Fly è rappresentato dal concetto di \textbf{funzione Fly}, ovvero una porzione di codice indipendente che eseguita in maniera concorrente, 
+similmente a quanto avviene con le funzioni Serverless del modello FaaS. Le funzioni Fly possono essere eseguite in sequenziale o in parallelo, sia su infrastruttura locale multi-processore che su Cloud
+ mediante l'utilizzo di appositi costrutti che ne permette la definizione, l'esecuzione, la sincronizzazione e la gestione della comunicazione. 
+ Quest’ultima viene resa disponibile anche tra processi differenti in esecuzione su diversi ambienti attraverso l'uso di appositi canali di comunicazione virtuali i quali rappresentano 
+ il metodo principale per lo scambio di dati tra diverse funzioni Fly. \\ 
 
 \begin{figure}[htbp]
  \centering
@@ -225,8 +248,8 @@ static AmazonS3 __s3_cloud = AmazonS3Client.builder()
 \end{lstlisting}
 
 \subsubsection{Ambiente su Cloud - Microsoft Azure}
-Utilizzare i servizi a disposizione sul \textbf{Cloud di Microsoft Azure} mediante linguaggi di programmazione risulta complesso e macchinoso a causa delle SDK fornite che, attualmente, presentano molteplici mancanze oltre ad una documentazione particolarmente scarna e spesso non aggiornata. Per tale motivo si è scelto di utilizzare il sistema di REST API attraverso delle chiamate \textit{HTTP}. L'integrazione dei servizi di Microsoft Azure all'interno del codice Java generato dal compilatore Fly è resa possibile grazie alla libreria AzureClient sviluppata presso l'ISISLab \cite{Grieco}, la quale permette di superare il problema della frammentazione delle SDK fornendo un'unica interfaccia che permette un più agevole utilizzo dei servizi. La gestione dei servizi di Azure con JavaScript soffre dei medesimi problemi in termini di SDK ed anche in questo caso è necessario utilizzare delle chiamate \textit{HTTP} per utilizzarli, in particolare vengono utilizzate le librerie \textit{axios} \cite{axios} e \textit{qs} \cite{qs}. In entrambi i casi rimane indispensabile il servizio Azure AD \cite{azureAD} per ottenere il \textit{token} di autorizzazione che permette di effettuare tali chiamate.\\
-L'utilizzo di un ambiente di esecuzione che utilizzi il \textbf{Cloud Azure} è possibile mediante la dichiarazione di una variabile di \verb|type|\verb|=|\verb|"azure"| la quale necessita di una serie di parametri corrispondenti alle caratteristiche necessarie al lancio delle funzioni Serverless sul servizio Azure Function \cite{azureFunction}:
+Utilizzare i servizi a disposizione sul \textbf{Cloud di Microsoft Azure} mediante linguaggi di programmazione risulta complesso e macchinoso a causa delle SDK fornite che, attualmente, presentano molteplici mancanze oltre ad una documentazione particolarmente scarna e spesso non aggiornata. Per tale motivo si è scelto di utilizzare il sistema di REST API attraverso delle chiamate \textit{HTTP}. L'integrazione dei servizi di Microsoft Azure all'interno del codice Java generato dal compilatore Fly è resa possibile grazie alla libreria AzureClient sviluppata presso l'ISISLab \cite{Grieco}, la quale permette di superare  della frammentazione delle SDK fornendo un'unica interfaccia che permette un più agevole utilizzo dei servizi. La gestione dei servizi di Azure con JavaScript soffre dei medesimi problemi in termini di SDK ed anche in questo caso è necessario utilizzare delle chiamate \textit{HTTP} per utilizzarli, in particolare vengono utilizzate le librerie \textit{axios} \cite{axios} e \textit{qs} \cite{qs}. In entrambi i casi rimane indispensabile il servizio Azure AD \cite{azureAD} per ottenere il \textit{token} di autorizzazione che permette di effettuare tali chiamate.\\
+L'utilizzo di un ambiente di esecuzione che utilizzi il \textbf{Cloud Azure} è possibile mediante la dichiarazione di una variabile di \verb|type|\verb|=|\verb|"azure"| la quale necessita di una serie di parametri corrispondenti alle caratteristiche necessarie al lancio delle funzioni Serverless sul servizio Azure Function \cite{azureFunction}:il problema
 
 \begin{itemize}
     \item \textbf{dati di accesso dell'account Azure}: in ordine sono necessari \verb|client_id|,  \verb|tenant_id|, \verb|secret_key|, \verb|subscription_id|;
