--- a/Capitoli/Introduzione/1cloud-computing.tex
+++ b/Capitoli/Introduzione/1cloud-computing.tex
@@ -1,22 +1,19 @@
 \section{Cloud Computing}
-Il Cloud Computing è una particolare ed innovativa forma di erogazione di risorse da un fornitore ad un cliente attraverso la rete internet. Esso segue un paradigma architetturale di tipo distribuito ed i servizi offerti possono essere vari come l'archiviazione, la computazione oppure una semplice trasmissione dati.
-Le risorse e le configurazioni a cui fa fede, non sono predefinite ma, con l'utilizzo di processi automatizzati, ogni
-%Approssimativo perchè esiste anche la possibilità di crearsi la propria infrastruttura cloud%
- Cloud Provider è in grado di personalizzare e scalare le risorse opportune per quel determinato servizio a quel determinato cliente. Una volta che quest'ultimo termina l'utilizzo delle risorse assegnate, queste tornano nuovamente disponibili, pronte per una nuova assegnazione.
+ll Cloud Computing è una particolare ed innovativa forma di erogazione delle risorse, permette infatti di erogare risorse di computazione quando ne sia necessario.
+Si basa sul modello di costo pay-as-you-go.  Questo modello consente alle aziende di pagare in base ai loro consumi.
+Grazie al Cloud Computing, inoltre, le aziende non hanno più la necessità di possedere un'infrastruttura fisica di calcolo, ma possono noleggiarne una dai vari Cloud Provider, che si occuperanno inoltre di gestirla e manutenerla.
+Il Cloud Computing ha avuto una rapida e veloce espansione negli ultimi anni principalmente grazie a questi vantaggi.
 
-\subsection{Vantaggi}
-E' possibile individuare i maggiori vantaggi che motivano le aziende e gli sviluppatori a utilizzare il Cloud Computing per i propri applicativi o per le proprie infrastrutture.
-%In realtà non è del tutto corretto perchè l'azienda può scegliere di costruirsi la propria infrastruttura su un Cloud locale%
-\subsubsection{Costi}
-E' chiaro che in quest'ottica, il modello economico Pay-as-you-go è diventato parte integrante della strategia di fruizione dei servizi, in quanto porta innumerevoli vantaggi ai fornitori ma sopratutto ai clienti stessi, tra cui:
-    \begin{itemize}
-    \item \textbf{Ottimizzazione del capitale} - la libertà di pagare solo ciò di cui si ha realmente bisogno, l'eliminazione dei costi di investimento e dei costi di mantenimento ed il miglioramento dell'efficienza energetica permettono un notevole abbattimento dei costi ed un'ottimizzazione del capitale.
-    \item \textbf{Flessibilità} - I clienti, in ogni momento ed in maniera quasi istantanea, hanno la massima libertà di poter annullare, sostituire o fermare qualsiasi servizio in corso.
-    \item \textbf{Scalabilità} - Il sistema adottato, accompagna senza problemi la crescita di piccole infrastrutture. In effetti, per una Start-up agli inizi, è pratico dotarsi di uno strumento adeguato in termini di prezzi e funzionalità, per poi farlo crescere in parallelo con l'evoluzione e le ambizioni dell'azienda.
-    \end{itemize}
+% \subsubsection{Costi}
+% il modello economico Pay-as-you-go è diventato parte integrante della strategia di fruizione dei servizi, in quanto porta innumerevoli vantaggi ai fornitori ma sopratutto ai clienti stessi, tra cui:
+%     \begin{itemize}
+%     \item \textbf{Ottimizzazione del capitale} - la libertà di pagare solo ciò di cui si ha realmente bisogno, l'eliminazione dei costi di investimento e dei costi di mantenimento ed il miglioramento dell'efficienza energetica permettono un notevole abbattimento dei costi ed un'ottimizzazione del capitale.
+%     \item \textbf{Flessibilità} - I clienti, in ogni momento ed in maniera quasi istantanea, hanno la massima libertà di poter annullare, sostituire o fermare qualsiasi servizio in corso.
+%     \item \textbf{Scalabilità} - È possibile in ogni momento, ed in base alle proprie esigenze, aumentare e diminuire le risorse in modo istantaneo. Il sistema adottato, accompagna senza problemi la crescita di piccole infrastrutture. In effetti, per una Start-up agli inizi, è pratico dotarsi di uno strumento adeguato in termini di prezzi e funzionalità, per poi farlo crescere in parallelo con l'evoluzione e le ambizioni dell'azienda.
+%     \end{itemize}
 
-\subsubsection{Performance e scalabilità}
-La tecnologia alla base del Cloud Computing è la virtualizzazione la quale, date le sue potenzialità, permette di ridimensionare agilmente le risorse assegnate. La potenza computazionale, la larghezza di banda e lo spazio di archiviazione sono esempi di risorse che possono essere scalate in base al carico di richieste, andando quindi ad allocarne una quantità maggiore in caso di maggiore attività, una quantità minore in caso di minore attività e a deallocare quelle inutilizzate in caso d'inattività prolungata.
+% \subsubsection{Performance e scalabilità}
+% La tecnologia alla base del Cloud Computing è la virtualizzazione la quale, date le sue potenzialità, permette di ridimensionare agilmente le risorse assegnate. La potenza computazionale, la larghezza di banda e lo spazio di archiviazione sono esempi di risorse che possono essere scalate in base al carico di richieste, andando quindi ad allocarne una quantità maggiore in caso di maggiore attività, una quantità minore in caso di minore attività e a deallocare quelle inutilizzate in caso d'inattività prolungata.
 
 \subsection{Modelli di servizio}
 Il Cloud Computing è un mondo in continua crescita ed evoluzione, nuovi prodotti e servizi cloud arrivano quasi ogni giorno, spinti dalle costanti innovazioni tecnologiche.
