--- a/Capitoli/Introduzione/2multi-cloud.tex
+++ b/Capitoli/Introduzione/2multi-cloud.tex
@@ -1,10 +1,11 @@
 %!TEX root = ../../00main.tex
 
 \section{Multi-cloud}
+il successo del cloud computing ha portato alla nascita di molteplici Cloud Provider. Questo ha spinto gli sviluppatori a sfruttare diversi cloud provider nella stessa architettura portando alla nascita del multi-cloud
 Il multi-cloud è una forma architetturale in cui si utilizzano risorse e servizi di Cloud Provider differenti convergendoli in una singola architettura eterogenea. 
 Le motivazioni che muovono un'organizzazione ad adottare questo tipo di strategia sono varie:
 \begin{itemize}
-\item \textbf{Necessità differenti} - Ogni Cloud Provider propone la propria gamma di servizi che non sempre rispecchia a pieno le esigenze del cliente. La possibilità e quindi la libertà di poter scegliere e selezionare distintamente i singoli servizi concedono all'utente il vantaggio di poter coprire totalmente le proprie esigenze.
+\item \textbf{Maggiore flessibilità} - Ogni Cloud Provider propone la propria gamma di servizi che differiscono tra loro in caratteristiche diventando migliori da utilizzare per particolari situazioni rispetto che altre. La possibilità e quindi la libertà di poter scegliere e selezionare distintamente i singoli servizi concedono all'utente il vantaggio di poter coprire totalmente le proprie esigenze.
 \item \textbf{Localizzazione} - Ogni Cloud Provider detiene le proprie infrastrutture dislocate in diverse aree geografiche, l'utente può decidere di utilizzarle in base alle proprie esigenze logistiche e legali.
 \item \textbf{Prestazioni} - L'utilizzo di risorse provenienti da fornitori distinti, permette una distribuzione più ampia dei servizi dell'applicativo.
 \end{itemize}
